added kontakt area and fixed several issues

--- a/index.html
+++ b/index.html
@@ -58,9 +58,6 @@
 
     <div id="portfolio" class="portfolio">
 
-        <div class="title">
-            <h2 >Portfolio</h2>
-        </div>
 
 
         <div class="projekt">
@@ -328,8 +325,12 @@
 
 
         <div id="kontakt" class="kontakt title">
-            <h2>Kontakt</h2>
 
+        </div>
+        <div class="kontakt-container">
+           <a href="mailto:christophschulze93@gmail.com" target="_blank"><i class="fa-solid fa-square-envelope fa-2xl"><link rel="stylesheet" href="styles.css"></i></a> 
+           <a href="https://twitter.com/justchris64"><i class="fa-brands fa-square-x-twitter fa-2xl"></i></a> 
+           <a href="https://github.com/ChristophSchulze93"><i class="fa-brands fa-square-github fa-2xl"></i> </a>
         </div>
 
         <script src="main.js"></script>
