added gamejam game, moved ptbs to top, added newspaper article to it, test avoid dark mode

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <div class="aboutme-text">
             <h2>Über mich</h2>
             <p>Hallo, ich heiße Christoph Schulze!</p>
-            <p>Willkommen auf meiner Portfolio-Website!</p>
+            <p>Aktuell studiere ich noch Visual Computing & Games Technology (M. Sc.) </p>
+            <p>und arbeite als wissenschaftlicher Mitarbeiter an der <a href="https://www.h-brs.de/de">Hochschule Bonn-Rhein-Sieg!</a></p>
         </div>
 
 
@@ -59,6 +60,38 @@
     <div id="portfolio" class="portfolio">
 
 
+        <div class="projekt">
+
+            <div class="projekt-text-box">
+                <h2>Agoraphobie-Simulation</h2>
+                <p>Genre:<span> VR Therapie-Simulation</span></p>
+                <p>System:<span> VR PC</span></p>
+                <p>Software:<span> Unity, Blender, Photoshop, CharacterCreator3, SubstancePainter</span></p>
+                <p>Programmiersprache:<span> C#</span></p>
+                <p>Beschreibung:<span> Forschungsprojekt zur Entwicklung einer virtuellen Agoraphobie-Therapieumgebung.
+                        Kooperation mit dem Uniklinikum Köln und der H-BRS.</span></p>
+                <p>Meine Rolle im Projekt:</p>
+                <ul>
+                    <li><span> Level-Design</span></li>
+                    <li><span> Avatar-Verhalten</span></li>
+                    <li><span> Avatare mit Hilfe von CharacterCreator3</span></li>
+                    <li><span> UI</span></li>
+                </ul>
+                <p>Zeitungsartikel:</p>
+                <a href="https://issuu.com/h-brs/docs/hbrs_22_01_jahresbericht_2021_innen_rz11_issuu/s/16604335"><i
+                        class="fa-solid fa-newspaper fa-2xl"></i></a>
+                <a
+                    href="https://ga.de/news/wissen-und-bildung/regional/sankt-augustiner-studenten-helfen-agoraphobie-betroffenen_aid-74871543"><i
+                        class="fa-solid fa-newspaper fa-2xl"></i></a>
+            </div>
+            <div class="project-images">
+                <img src="./img/PTBS/image17.png">
+                <img src="./img/PTBS/image22.png">
+                <img src="./img/PTBS/image29.png">
+
+
+            </div>
+        </div>
 
         <div class="projekt">
 
@@ -199,7 +232,8 @@
                 <img src="./img/ARQuartett/image8.png">
                 <img src="./img/ARQuartett/image1.jpg">
                 <img src="./img/ARQuartett/image32.jpg">
-                <iframe src="https://drive.google.com/file/d/1g0zT60rqoO5Jb2F0HMrVU7MEyoZE462b/preview" width="640" height="480" allow="autoplay"></iframe>
+                <iframe src="https://drive.google.com/file/d/1g0zT60rqoO5Jb2F0HMrVU7MEyoZE462b/preview" width="640"
+                    height="480" allow="autoplay"></iframe>
 
             </div>
         </div>
@@ -212,7 +246,8 @@
                 <p>System:<span> VR PC</span></p>
                 <p>Software:<span> Unity, Blender, Maya</span></p>
                 <p>Programmiersprache:<span> C#</span></p>
-                <p>Beschreibung:<span> Du bist durch eine Zeitreise in eine andere Dimension geraten. Verteidige dich gegen alle Angreifer!</span></p>
+                <p>Beschreibung:<span> Du bist durch eine Zeitreise in eine andere Dimension geraten. Verteidige dich
+                        gegen alle Angreifer!</span></p>
                 <p>Meine Rolle im Projekt:</p>
                 <ul>
                     <li><span> Boss-fight Design und Implementierung</span></li>
@@ -229,47 +264,24 @@
             </div>
         </div>
 
-        <div class="projekt">
 
-            <div class="projekt-text-box">
-                <h2>Agoraphobie-Simulation</h2>
-                <p>Genre:<span> VR Therapie-Simulation</span></p>
-                <p>System:<span> VR PC</span></p>
-                <p>Software:<span> Unity, Blender, Photoshop, CharacterCreator3, SubstancePainter</span></p>
-                <p>Programmiersprache:<span> C#</span></p>
-                <p>Beschreibung:<span> Forschungsprojekt zur Entwicklung einer virtuellen Agoraphobie-Therapieumgebung. Kooperation mit dem Uniklinikum Köln und der H-BRS.</span></p>
-                <p>Meine Rolle im Projekt:</p>
-                <ul>
-                    <li><span> Level-Design</span></li>
-                    <li><span> Avatar-Verhalten</span></li>
-                    <li><span> Avatare mit Hilfe von CharacterCreator3</span></li>
-                    <li><span> UI</span></li>                    
-                </ul>
-            </div>
-            <div class="project-images">
-                <img src="./img/PTBS/image17.png">
-                <img src="./img/PTBS/image22.png">
-                <img src="./img/PTBS/image29.png">
-
-
-            </div>
-        </div>
 
         <div class="projekt">
 
             <div class="projekt-text-box">
-                <h2>Alpha Numericus</h2>
+                <h2>Alpha Numericus (unfinished)</h2>
                 <p>Genre:<span> Online Multiplayer Action Roleplay Game</span></p>
                 <p>System:<span> PC</span></p>
                 <p>Software:<span> Unity, Blender, Photoshop</span></p>
                 <p>Programmiersprache:<span> C#, PHP, SQL</span></p>
-                <p>Beschreibung:<span> Beschütze dein Königreich und bringe die Macht wieder ins Gleichgewicht</span></p>
+                <p>Beschreibung:<span> Beschütze dein Königreich und bringe die Macht wieder ins Gleichgewicht</span>
+                </p>
                 <p>Meine Rolle im Projekt:</p>
                 <ul>
                     <li><span> Alle grafischen Inhalte</span></li>
                     <li><span> Online-Setup</span></li>
                     <li><span> Login und Account-Management</span></li>
-                    <li><span> Inventar</span></li>                    
+                    <li><span> Inventar</span></li>
                 </ul>
             </div>
             <div class="project-images">
@@ -280,7 +292,7 @@
             </div>
         </div>
 
-        
+
         <div class="projekt">
 
             <div class="projekt-text-box">
@@ -289,10 +301,11 @@
                 <p>System:<span> Android</span></p>
                 <p>Software:<span> Unity, Blender</span></p>
                 <p>Programmiersprache:<span> C#</span></p>
-                <p>Beschreibung:<span> Weiche den Hindernissen aus und halte so lange durch wie möglich durch!</span></p>
+                <p>Beschreibung:<span> Weiche den Hindernissen aus und halte so lange durch wie möglich durch!</span>
+                </p>
                 <p>Meine Rolle im Projekt:</p>
                 <ul>
-                    <li><span> Einzelprojekt</span></li>               
+                    <li><span> Einzelprojekt</span></li>
                 </ul>
             </div>
             <div class="project-images">
@@ -300,7 +313,7 @@
                 <img src="./img/FlappyMage/image21.png">
             </div>
         </div>
-                
+
         <div class="projekt">
 
             <div class="projekt-text-box">
@@ -309,10 +322,11 @@
                 <p>System:<span> Android</span></p>
                 <p>Software:<span> Unity, Blender</span></p>
                 <p>Programmiersprache:<span> C#</span></p>
-                <p>Beschreibung:<span> Navigiere die Weihnachtskugel sicher zum Weihnachtsbaum ohne sie dabei zu zerstören!</span></p>
+                <p>Beschreibung:<span> Navigiere die Weihnachtskugel sicher zum Weihnachtsbaum ohne sie dabei zu
+                        zerstören!</span></p>
                 <p>Meine Rolle im Projekt:</p>
                 <ul>
-                    <li><span> Einzelprojekt</span></li>               
+                    <li><span> Einzelprojekt</span></li>
                 </ul>
             </div>
             <div class="project-images">
@@ -322,15 +336,39 @@
             </div>
         </div>
 
+        <div class="projekt">
+
+            <div class="projekt-text-box">
+                <h2>Only One Prison Break (GMTK 2019)</h2>
+                <p>Genre:<span> Horror-Puzzle</span></p>
+                <p>System:<span> PC</span></p>
+                <p>Software:<span> Unity, Blender, Photoshop</span></p>
+                <p>Programmiersprache:<span> C#</span></p>
+                <p>Beschreibung:<span> Du hast den Gefängnisausbruch verschlafen und bist der Letzte im Gefängnis mit einem Wärter. Entkomme aus dem Gefängnis ohne gefangen zu werden mit deiner letzten Batterie.</span></p>
+                <p>Meine Rolle im Projekt:</p>
+                <ul>
+                    <li><span> Programmierung und Modellierung</span></li>
+                </ul>
+                <p>Link:&nbsp; <a href="https://magicmushroomstudios.itch.io/onlyoneprisonbreak"><i class="fa-solid fa-gamepad fa-2xl"></i></a></p>
+
+            </div>
+            <div class="project-images">
+                <img src="./img/PrisonBreak/image13.png">
+
+            </div>
+        </div>
+
 
 
         <div id="kontakt" class="kontakt title">
 
         </div>
         <div class="kontakt-container">
-           <a href="mailto:christophschulze93@gmail.com" target="_blank"><i class="fa-solid fa-square-envelope fa-2xl"><link rel="stylesheet" href="styles.css"></i></a> 
-           <a href="https://twitter.com/justchris64"><i class="fa-brands fa-square-x-twitter fa-2xl"></i></a> 
-           <a href="https://github.com/ChristophSchulze93"><i class="fa-brands fa-square-github fa-2xl"></i> </a>
+            <a href="mailto:christophschulze93@gmail.com" target="_blank"><i class="fa-solid fa-square-envelope fa-2xl">
+                    <link rel="stylesheet" href="styles.css">
+                </i></a>
+            <a href="https://twitter.com/justchris64"><i class="fa-brands fa-square-x-twitter fa-2xl"></i></a>
+            <a href="https://github.com/ChristophSchulze93"><i class="fa-brands fa-square-github fa-2xl"></i> </a>
         </div>
 
         <script src="main.js"></script>
