fixed issues with img scaling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <h2>Über mich</h2>
             <p>Hallo, ich heiße Christoph Schulze!</p>
             <p>Aktuell studiere ich noch Visual Computing & Games Technology (M. Sc.) </p>
-            <p>und arbeite als wissenschaftlicher Mitarbeiter an der <a href="https://www.h-brs.de/de">Hochschule Bonn-Rhein-Sieg!</a></p>
+            <p>und arbeite als wissenschaftlicher Mitarbeiter an der <a href="https://www.h-brs.de/de">Hochschule
+                    Bonn-Rhein-Sieg!</a></p>
         </div>
 
 
@@ -229,7 +230,7 @@
             </div>
             <div class="project-images">
 
-                <img src="./img/ARQuartett/image8.png">
+
                 <img src="./img/ARQuartett/image1.jpg">
                 <img src="./img/ARQuartett/image32.jpg">
                 <iframe src="https://drive.google.com/file/d/1g0zT60rqoO5Jb2F0HMrVU7MEyoZE462b/preview" width="640"
@@ -344,12 +345,15 @@
                 <p>System:<span> PC</span></p>
                 <p>Software:<span> Unity, Blender, Photoshop</span></p>
                 <p>Programmiersprache:<span> C#</span></p>
-                <p>Beschreibung:<span> Du hast den Gefängnisausbruch verschlafen und bist der Letzte im Gefängnis mit einem Wärter. Entkomme aus dem Gefängnis ohne gefangen zu werden mit deiner letzten Batterie.</span></p>
+                <p>Beschreibung:<span> Du hast den Gefängnisausbruch verschlafen und bist der Letzte im Gefängnis mit
+                        einem Wärter. Entkomme aus dem Gefängnis ohne gefangen zu werden mit deiner letzten
+                        Batterie.</span></p>
                 <p>Meine Rolle im Projekt:</p>
                 <ul>
                     <li><span> Programmierung und Modellierung</span></li>
                 </ul>
-                <p>Link:&nbsp; <a href="https://magicmushroomstudios.itch.io/onlyoneprisonbreak"><i class="fa-solid fa-gamepad fa-2xl"></i></a></p>
+                <p>Link:&nbsp; <a href="https://magicmushroomstudios.itch.io/onlyoneprisonbreak"><i
+                            class="fa-solid fa-gamepad fa-2xl"></i></a></p>
 
             </div>
             <div class="project-images">
