fixed more responsive issues

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
 
     <div id="aboutme" class="aboutme">
+
         <img src="./img/Chris_Profilbild.png">
+
+
         <div class="aboutme-text">
             <h2>Über mich</h2>
             <p>Hallo, ich heiße Christoph Schulze!</p>
@@ -78,12 +81,15 @@
                     <li><span> Avatare mit Hilfe von CharacterCreator3</span></li>
                     <li><span> UI</span></li>
                 </ul>
-                <p>Zeitungsartikel:</p>
-                <a href="https://issuu.com/h-brs/docs/hbrs_22_01_jahresbericht_2021_innen_rz11_issuu/s/16604335"><i
-                        class="fa-solid fa-newspaper fa-2xl"></i></a>
-                <a
-                    href="https://ga.de/news/wissen-und-bildung/regional/sankt-augustiner-studenten-helfen-agoraphobie-betroffenen_aid-74871543"><i
-                        class="fa-solid fa-newspaper fa-2xl"></i></a>
+                <div class="artikel">
+                    <p>Zeitungsartikel:</p>
+                    <a href="https://issuu.com/h-brs/docs/hbrs_22_01_jahresbericht_2021_innen_rz11_issuu/s/16604335"><i
+                            class="fa-solid fa-newspaper fa-2xl"></i></a>
+                    <a
+                        href="https://ga.de/news/wissen-und-bildung/regional/sankt-augustiner-studenten-helfen-agoraphobie-betroffenen_aid-74871543"><i
+                            class="fa-solid fa-newspaper fa-2xl"></i></a>
+                </div>
+
             </div>
             <div class="project-images">
                 <img src="./img/PTBS/image17.png">
@@ -138,8 +144,6 @@
                 <img src="./img/wAROfSummoners/image25.png">
                 <img src="./img/wAROfSummoners/image23.png">
                 <img src="./img/wAROfSummoners/image27.png">
-                <iframe src="https://drive.google.com/file/d/1b_Ro8zNpr6MSzc_IOi9iQSa_-mHHbQo5/preview" width="640"
-                    height="480" allow="autoplay"></iframe>
 
 
             </div>
@@ -233,8 +237,6 @@
 
                 <img src="./img/ARQuartett/image1.jpg">
                 <img src="./img/ARQuartett/image32.jpg">
-                <iframe src="https://drive.google.com/file/d/1g0zT60rqoO5Jb2F0HMrVU7MEyoZE462b/preview" width="640"
-                    height="480" allow="autoplay"></iframe>
 
             </div>
         </div>
@@ -364,9 +366,6 @@
 
 
 
-        <div id="kontakt" class="kontakt title">
-
-        </div>
         <div class="kontakt-container">
             <a href="mailto:christophschulze93@gmail.com" target="_blank"><i class="fa-solid fa-square-envelope fa-2xl">
                     <link rel="stylesheet" href="styles.css">
@@ -376,6 +375,7 @@
         </div>
 
         <script src="main.js"></script>
+
 </body>
 
 </html>
